# procreate-to-tif

./: .gitignore  CONTRIBUTING.md  CREDITS.md  LICENSE  MANIFEST.in  MANUAL.md  README.md  convert.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
macos-app/ProArchiveConverter/: Package.resolved  Package.swift  README.md
macos-app/ProArchiveConverter/Sources/ProArchiveConverterApp/: AboutView.swift  AppViewModel.swift  BrandAssets.swift  ContentView.swift  ProArchiveConverterApp.swift
macos-app/ProArchiveConverter/Sources/ProcreateBridgeCore/: ConversionLogDecoder.swift  ConversionLogEvent.swift  ConversionOptions.swift  ConverterInvocation.swift  ConverterProcessRunner.swift
macos-app/ProArchiveConverter/Tests/ProcreateBridgeCoreTests/: ConversionLogDecoderTests.swift  ConverterInvocationTests.swift  ConverterProcessRunnerTests.swift
packaging/: README.md  build_backend_cli.sh  notarize_app.sh  sign_app_bundle.sh  stage_backend_for_app.sh
packaging/pyinstaller/: proarchive_cli.spec
script/: build_and_run.sh
src/procreate_to_tif/: __init__.py  cli.py  image_ops.py  masking.py  models.py  pipeline.py  procreate_parser.py  psd_writer.py  tile_decoder.py  video_export.py
tests/: __init__.py  fixtures.py  test_cli_jsonl.py  test_smoke.py  test_tile_decoder.py  test_video_export.py
